<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/availableTxt"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:text="@string/sd_available_not"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/connectBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/connect_to_sd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/availableTxt"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/a"
        app:layout_constraintEnd_toStartOf="@+id/btnB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/b"
        app:layout_constraintEnd_toStartOf="@+id/btnC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnA"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnB"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="18dp"
        android:layout_marginTop="128dp"
        android:text="@string/select_trash_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableTxt" />

    <TextView
        android:id="@+id/timeLeftTxt"
        android:layout_width="126dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/time_left_to_drop_trash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnA" />

    <TextView
        android:id="@+id/timeTxt"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/_00_00"
        app:layout_constraintStart_toEndOf="@+id/timeLeftTxt"
        app:layout_constraintTop_toBottomOf="@+id/btnB" />

    <Button
        android:id="@+id/moreTimeBtn"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="55dp"
        android:text="@string/add_time"
        app:layout_constraintStart_toEndOf="@+id/timeTxt"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <TextView
        android:id="@+id/token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableTxt" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="38dp"
        android:text="CHECK STATUS"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/token"
        app:layout_constraintTop_toBottomOf="@+id/availableTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>